<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Numero_de_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/Student_Count"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/txt_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Student_Name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Numero_de_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/Student_Mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mes" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="Submit"
        android:text="@string/Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Correo" />

    <EditText
        android:id="@+id/Day"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/Student_Date_Day"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="2"
        app:layout_constraintBottom_toTopOf="@+id/Correo"
        app:layout_constraintEnd_toStartOf="@+id/mes"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_date" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="212dp"
        android:layout_height="18dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no"
        android:text="@string/Student_Date"
        app:layout_constraintBottom_toTopOf="@+id/mes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numero_de_cuenta" />

    <EditText
        android:id="@+id/mes"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/Student_Date_Month"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="2"
        app:layout_constraintBottom_toTopOf="@+id/Correo"
        app:layout_constraintEnd_toStartOf="@+id/year"
        app:layout_constraintStart_toEndOf="@+id/Day"
        app:layout_constraintTop_toBottomOf="@+id/txt_date" />

    <EditText
        android:id="@+id/year"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/Student_Date_Year"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@+id/Correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/mes"
        app:layout_constraintTop_toBottomOf="@+id/txt_date" />
</androidx.constraintlayout.widget.ConstraintLayout>